# cfix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: settings_example.yaml
include/cfix/: acceptor.h  client.h  initiator.h  list.h  memory.h  message.h  parser.h  ring.h  server.h  session.h  settings.h  string.h  tag.h  transport.h
include/cfix/fix40/: tag.h
src/: acceptor.c  client.c  initiator.c  memory.h  message.c  server.c  settings.c  string.c  transport.c
src/benchmark/: main.c
src/cfix/: message.c  parser.c  ring.c
src/fix40/: tag.c
src/tcp/: acceptor.c  acceptor.h  client.c  client.h  close.h  initiator.c  initiator.h  server.c  server.h  transport.c  transport.h
tests/: context.c  context.h  main.c  unit_message.c  unit_parser.c  unit_recv_chunker.c  unit_ring.c  unit_send_chunker.c  unit_settings.c  unit_tcp_acceptor.c  unit_tcp_server.c
